--- a/data/resume.toml
+++ b/data/resume.toml
@@ -22,7 +22,7 @@ endDate = "Present"
 highlights = [
  "Implement automated processing and distribution of near-real-time satellite data",
  "Develop and maintain Rails applications supporting scientific research and data discovery",
- "Lead adoption of Chef in consolidated research IT organization",
+ "Lead adoption of Chef among research IT staff",
  "Advise faculty and staff in improving workflow and tools"
 ]
 
@@ -75,7 +75,9 @@ keywords = [
 name = "Ops"
 keywords = [
   "Chef",
+  "Habitat",
   "Linux",
+  "Shell",
   "Terraform",
   "AWS"
 ]
